app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
//Add your custom bootstrap variables here, see https://github.com/twbs/bootstrap-sass/blob/master/vendor/assets/stylesheets/bootstrap/_variables.scss for full list of variables.

@import url("//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");

// over-ride variables here if needed
$icon-font-path: "../../bootstrap/";

$gray-darker:            lighten(#000, 13.5%) !default; // #222
$gray-dark:              lighten(#000, 20%) !default;   // #333
$gray:                   lighten(#000, 33.5%) !default; // #555
$gray-light:             lighten(#000, 60%) !default;   // #999
$gray-lighter:           lighten(#000, 93.5%) !default; // #eee

$brand-primary:         #475A5F !default;
$brand-success:         #5cb85c !default;
$brand-info:            #475A5F!default;
$brand-warning:         #f0ad4e !default;
$brand-danger:          #d9534f !default;

$font-family-sans-serif:  "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
$font-family-serif:       Georgia, "Times New Roman", Times, serif;
//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.

$font-size-base:          15px;
$headings-font-weight:    300;

$panel-default-text:          $gray-dark !default;
$panel-default-border:        #ddd !default;
$panel-default-heading-bg:    #f5f5f5 !default;

$panel-primary-text:          #fff !default;
$panel-primary-border:        $brand-primary !default;
$panel-primary-heading-bg:    $brand-primary !default;

@font-face {
  font-family: 'Glyphicons Halflings';
  src: font-url('glyphicons-halflings-regular.eot');
  src: url(font-path('glyphicons-halflings-regular.eot') + '?#iefix') format('embedded-opentype');
  src: font-url('glyphicons-halflings-regular.woff') format('woff');
  src: font-url('glyphicons-halflings-regular.ttf') format('truetype');
  src: url(font-path('glyphicons-halflings-regular.svg') + '#glyphicons_halflingsregular') format('svg');
}

@import "bootstrap";


// -- Spree Custom Header and Footer ---------------------
#headerline {
  background-color: rgba( 226, 89, 17, 1.0);
  height: 8px;
}

#spree-header {
  margin-bottom: $line-height-computed;
  #header {
    background: #fff;
    padding: $line-height-computed 0px 0px 0px;
  }
  #logo {
    margin-bottom: 5px;
    img {
      width: 306px;
    }
  }
  .nav a {
    color: #000;
    font-size: 17px;
    &:hover {
      background: rgba( 226, 89, 17, 0.8);
    }
  }
  .navbar {
    border: 0;
    margin-bottom: 0;
  }
}
#spree-footer {
  background: $gray-dark;
  padding-top: $padding-base-horizontal;
  margin-top: $line-height-computed;
  color: #fff;
}

// -- Spree Layout Custom Rules -------------------------

//TODO, bug #6
.alert-error, .alert-registration_error { @extend .alert-danger; }
.alert-alert { @extend .alert-info; }

.product-body {
  height: 230px;
}
.progress-steps {
  margin-top: $line-height-computed;
}
h1 {
  margin-bottom: 30px;
}

#navigation {
  vertical-align: middle;
}

// ----for the footer --------------

footer {
  font-size: 0.9em;
  color: #CCC;
  text-align: center;

  li {
  list-style-type: none;
  text-align: left;
  }

  li a {
 
  color: #CCC; 
  }
  
}

#footer-middle img {
  margin-top: 10px;
}

#footer-left img {
  margin-left: 10px;
}

#footer-right a:hover {
    color: rgba( 226, 89, 17, 1.0);
    text-decoration: none;
  }

#footer-bottom {
  border-top: 1px solid #CCC;
  p {
  text-align: center; 
  padding-top: 8px; 
  font-size: 0.8em
  }
  a {
  color: #09C;
  }
} 

// ----list of products(running costumes) page -----

#products-price {
  background-color: #475A5F;
  .lead {
  font-size: 0.9em;
  }
  a {
  color: white;
  }
}


// ---- the product page ------------

.panel {
  margin-top: 21px;
}

.list-group li {
  list-style-type: none;
}

//#product-description {
//  .well {
//  border: 1px solid #475A5F;
//  color: #475A5F;
//  }
//}

// ----- ourstory -------------

#dani-profile {
  float:right;
  margin: 5px 10px;
}

// ---- homepage additional section ---------

.reviews {
  h2 {
  color: rgb(226, 89, 17);
  }
  p {
  font-size: 1.3em;
  }
}

#review-image {
  text-align: center; 
}

#line-break {
  margin: 35px 0px;  
  border-top: 1px solid lighten(#000, 82%)
}

#product-header {
  background-color: #475A5F;
  color: white;
  margin-top: 35px; 
}

// ---- checkout section ----

// hide the stripe payment method

#payment-method-fields {
  display: none;
}

